changed: auth changed from jwt to session
