# internal/handlers/auth_handler.go
@@ -2,27 +2,23 @@ package handlers
 
 import (
 	"encoding/json"
-	"errors"
 	"net/http"
-	"strings"
 	"time"
 
 	"github.com/go-park-mail-ru/2024_2_BogoSort/config"
 	"github.com/go-park-mail-ru/2024_2_BogoSort/internal/responses"
-	"github.com/go-park-mail-ru/2024_2_BogoSort/internal/storage"
 	"github.com/go-park-mail-ru/2024_2_BogoSort/pkg/utils"
 	"github.com/go-playground/validator/v10"
 )
 
 var validate = validator.New()
 
-var (
-	ErrEmptyRequestBody   = errors.New("empty request body")
-	ErrInvalidRequestBody = errors.New("invalid request body")
-	ErrInvalidRequestData = errors.New("invalid request data")
-)
+type AuthData struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
 
-type AuthCredentials struct {
+type LoginCredentials struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required"`
 }
@@ -33,285 +29,141 @@ type AuthCredentials struct {
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param credentials body AuthCredentials true "User credentials"
+// @Param credentials body AuthData true "User credentials"
 // @Success 201 {object} responses.AuthResponse
-// @Failure 400 {object} responses.ErrResponse
-// @Failure 405 {object} responses.ErrResponse
-// @Failure 500 {object} responses.ErrResponse
-// @Router /api/v1/signup [post]
-func (ah *AuthHandler) SignupHandler(writer http.ResponseWriter, r *http.Request) {
+// @Failure 400 {object} responses.ErrResponse "Invalid request body or data"
+// @Failure 405 {object} responses.ErrResponse "Method not allowed"
+// @Failure 500 {object} responses.ErrResponse "Failed to create user"
+// @Router /signup [post]
+func (ah *AuthHandler) SignupHandler(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
-		responses.SendErrorResponse(writer, http.StatusMethodNotAllowed, "Method not allowed")
-
+		responses.SendErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
 		return
 	}
 
-	var credentials AuthCredentials
+	var credentials AuthData
 	if err := json.NewDecoder(r.Body).Decode(&credentials); err != nil {
-		responses.SendErrorResponse(writer, http.StatusBadRequest, "Invalid request body")
-
+		responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request body")
 		return
 	}
 
 	if err := validate.Struct(credentials); err != nil {
-		responses.SendErrorResponse(writer, http.StatusBadRequest, "Invalid request data")
-
+		responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request data")
 		return
 	}
 
 	if err := utils.ValidatePassword(credentials.Password); err != nil {
-		responses.SendErrorResponse(writer, http.StatusBadRequest, err.Error())
-
+		responses.SendErrorResponse(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
 	user, err := ah.UserStorage.CreateUser(credentials.Email, credentials.Password)
 	if err != nil {
 		if err.Error() == "user already exists" {
-			responses.SendErrorResponse(writer, http.StatusBadRequest, "User already exists")
+			responses.SendErrorResponse(w, http.StatusBadRequest, "User already exists")
 		} else {
-			responses.SendErrorResponse(writer, http.StatusInternalServerError, "Failed to create user")
+			responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to create user")
 		}
-
 		return
 	}
 
-	tokenString, err := utils.CreateToken(user.Email)
-	if err != nil {
-		responses.SendErrorResponse(writer, http.StatusInternalServerError, "Failed to generate token")
-
-		return
-	}
-
-	refreshToken, err := utils.CreateRefreshToken(user.Email)
-	if err != nil {
-		responses.SendErrorResponse(writer, http.StatusInternalServerError, "Failed to generate refresh token")
-
-		return
-	}
+	sessionID := ah.SessionStorage.AddSession(user.Email)
 
 	cookie := &http.Cookie{
 		Name:     "session_id",
-		Value:    tokenString,
+		Value:    sessionID,
 		Expires:  time.Now().Add(config.GetJWTExpirationTime()),
 		HttpOnly: true,
 	}
 
-	http.SetCookie(writer, cookie)
+	http.SetCookie(w, cookie)
 
-	responses.SendJSONResponse(writer, http.StatusCreated, responses.AuthResponse{Token: tokenString, RefreshToken: refreshToken, Email: user.Email})
+	responses.SendJSONResponse(w, http.StatusCreated, responses.AuthResponse{
+		Email:     user.Email,
+		SessionID: sessionID,
+		IsAuth:    true,
+	})
 }
 
 // LoginHandler godoc
 // @Summary Login a user
-// @Description Login a user with email and password or with a valid session cookie or Authorization header
+// @Description Login a user with email and password
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param credentials body AuthCredentials false "User credentials"
+// @Param credentials body LoginCredentials true "User credentials"
 // @Success 200 {object} responses.AuthResponse
-// @Failure 400 {object} responses.ErrResponse
-// @Failure 401 {object} responses.ErrResponse
-// @Failure 405 {object} responses.ErrResponse
-// @Failure 500 {object} responses.ErrResponse
-// @Router /api/v1/login [post]
+// @Failure 400 {object} responses.ErrResponse "Invalid request body or data"
+// @Failure 401 {object} responses.ErrResponse "Invalid credentials"
+// @Failure 405 {object} responses.ErrResponse "Method not allowed"
+// @Router /login [post]	
 func (ah *AuthHandler) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		responses.SendErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
-
 		return
 	}
 
-	var (
-		email string
-		err   error
-	)
-
-	var credentials AuthCredentials
-	if r.Body != nil && r.ContentLength != 0 {
-		if err := json.NewDecoder(r.Body).Decode(&credentials); err != nil {
-			responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request body")
-
-			return
-		}
-
-		if err := validate.Struct(credentials); err != nil {
-			responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request data")
-
-			return
-		}
-
-		user, err := ah.UserStorage.ValidateUserByEmailAndPassword(credentials.Email, credentials.Password)
-		if err != nil {
-			http.SetCookie(w, &http.Cookie{
-				Name:     "session_id",
-				Value:    "",
-				Expires:  time.Now().Add(-time.Hour),
-				HttpOnly: true,
-			})
-
-			responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid credentials: user not found")
-
-			return
-		}
-
-		tokenString, err := utils.CreateToken(user.Email)
-		if err != nil {
-			responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to generate token")
-
-			return
-		}
-
-		refreshToken, err := utils.CreateRefreshToken(user.Email)
-		if err != nil {
-			responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to generate refresh token")
-
-			return
-		}
-
-		cookie := &http.Cookie{
-			Name:     "session_id",
-			Value:    tokenString,
-			Expires:  time.Now().Add(config.GetJWTExpirationTime()),
-			HttpOnly: true,
-		}
-		http.SetCookie(w, cookie)
-		responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{Token: tokenString, RefreshToken: refreshToken, Email: user.Email})
-
-		return
-	}
-
-	cookie, err := r.Cookie("session_id")
-	if err == nil {
-		email, err = utils.ValidateToken(cookie.Value)
-		if err == nil {
-			responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{Token: cookie.Value, Email: email})
-
-			return
-		}
-	}
-
-	authHeader := r.Header.Get("Authorization")
-	if authHeader != "" {
-		tokenString := strings.TrimPrefix(authHeader, "Bearer ")
-		email, err = utils.ValidateToken(tokenString)
-		if err == nil {
-			responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{Token: tokenString, Email: email})
-
-			return
-		}
-	}
-
-	responses.SendErrorResponse(w, http.StatusUnauthorized, "Invalid credentials")
-}
-
-// RefreshHandler godoc
-// @Summary Refresh a user's token
-// @Description Refresh a user's token using a valid refresh token
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param refresh_token body string true "Refresh token"
-// @Success 200 {object} responses.AuthResponse
-// @Failure 400 {object} responses.ErrResponse
-// @Failure 401 {object} responses.ErrResponse
-// @Failure 405 {object} responses.ErrResponse
-// @Failure 500 {object} responses.ErrResponse
-// @Router /api/v1/refresh [post]
-func (ah *AuthHandler) RefreshHandler(w http.ResponseWriter, r *http.Request) {
-	if r.Method != http.MethodPost {
-		responses.SendErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
-
-		return
-	}
-
-	var requestBody struct {
-		RefreshToken string `json:"refresh_token" validate:"required"`
-	}
-
-	if err := json.NewDecoder(r.Body).Decode(&requestBody); err != nil {
+	var credentials LoginCredentials
+	if err := json.NewDecoder(r.Body).Decode(&credentials); err != nil {
 		responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request body")
-
 		return
 	}
 
-	if err := validate.Struct(requestBody); err != nil {
+	if err := validate.Struct(credentials); err != nil {
 		responses.SendErrorResponse(w, http.StatusBadRequest, "Invalid request data")
-
 		return
 	}
 
-	if storage.IsBlacklisted(requestBody.RefreshToken) {
-		responses.SendErrorResponse(w, http.StatusUnauthorized, "Invalid refresh token")
-
-		return
-	}
-
-	email, err := utils.ValidateToken(requestBody.RefreshToken)
+	user, err := ah.UserStorage.ValidateUserByEmailAndPassword(credentials.Email, credentials.Password)
 	if err != nil {
-		responses.SendErrorResponse(w, http.StatusUnauthorized, "Invalid refresh token")
-
+		responses.SendErrorResponse(w, http.StatusUnauthorized, "Invalid credentials")
 		return
 	}
 
-	tokenString, err := utils.CreateToken(email)
-	if err != nil {
-		responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to generate token")
+	sessionID := ah.SessionStorage.AddSession(user.Email)
 
-		return
+	cookie := &http.Cookie{
+		Name:     "session_id",
+		Value:    sessionID,
+		Expires:  time.Now().Add(config.GetJWTExpirationTime()),
+		HttpOnly: true,
 	}
 
-	refreshToken, err := utils.CreateRefreshToken(email)
-	if err != nil {
-		responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to generate refresh token")
+	http.SetCookie(w, cookie)
 
-		return
-	}
-
-	responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{Token: tokenString, RefreshToken: refreshToken, Email: email})
+	responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{
+		Email:     user.Email,
+		SessionID: sessionID,
+		IsAuth:    true,
+	})
 }
 
-// LogoutHandler godoc
-// @Summary Logout a user
-// @Description Logout a user by invalidating the session cookie or Authorization header
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string]string
-// @Failure 400 {object} responses.ErrResponse
-// @Failure 401 {object} responses.ErrResponse
-// @Failure 405 {object} responses.ErrResponse
-// @Router /api/v1/logout [post]
 func (ah *AuthHandler) LogoutHandler(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		responses.SendErrorResponse(w, http.StatusMethodNotAllowed, "Method not allowed")
-
 		return
 	}
 
-	var (
-		token string
-		err   error
-	)
-
 	cookie, err := r.Cookie("session_id")
-	if err == nil {
-		token = cookie.Value
-	} else {
-		authHeader := r.Header.Get("Authorization")
-		if authHeader != "" {
-			token = strings.TrimPrefix(authHeader, "Bearer ")
-		} else {
+	if err != nil {
+		if err == http.ErrNoCookie {
 			responses.SendErrorResponse(w, http.StatusUnauthorized, "No active session")
-
 			return
 		}
+		responses.SendErrorResponse(w, http.StatusBadRequest, "Failed to retrieve cookie")
+		return
 	}
 
-	_, err = utils.ValidateToken(token)
-	if err != nil {
-		responses.SendErrorResponse(w, http.StatusUnauthorized, "Invalid token")
+	sessionID := cookie.Value
 
+	if !ah.SessionStorage.SessionExists(sessionID) {
+		responses.SendErrorResponse(w, http.StatusUnauthorized, "Session does not exist")
+		return
+	}
+
+	err = ah.SessionStorage.RemoveSession(sessionID)
+	if err != nil {
+		responses.SendErrorResponse(w, http.StatusInternalServerError, "Failed to remove session")
 		return
 	}
 
@@ -324,4 +176,44 @@ func (ah *AuthHandler) LogoutHandler(w http.ResponseWriter, r *http.Request) {
 	http.SetCookie(w, cookie)
 
 	responses.SendJSONResponse(w, http.StatusOK, map[string]string{"message": "Logged out successfully"})
+}
+
+// CheckAuth godoc
+// @Summary Check if user is authenticated
+// @Description Verify if the current session is valid and the user is authenticated
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Success 200 {object} responses.AuthResponse
+// @Failure 400 {object} responses.ErrResponse "Failed to retrieve cookie"
+// @Failure 401 {object} responses.ErrResponse "No active session or session does not exist"
+// @Router /check-auth [get]	
+func (ah *AuthHandler) CheckAuthHandler(w http.ResponseWriter, r *http.Request) {
+	cookie, err := r.Cookie("session_id")
+	if err != nil {
+		if err == http.ErrNoCookie {
+			responses.SendErrorResponse(w, http.StatusUnauthorized, "No active session")
+			return
+		}
+		responses.SendErrorResponse(w, http.StatusBadRequest, "Failed to retrieve cookie")
+		return
+	}
+
+	sessionID := cookie.Value
+
+	if !ah.SessionStorage.SessionExists(sessionID) {
+		responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{
+			Email:     "",
+			SessionID: "",
+			IsAuth:    false,
+		})
+
+		return
+	}
+
+	responses.SendJSONResponse(w, http.StatusOK, responses.AuthResponse{
+		Email:     "",
+		SessionID: sessionID,
+		IsAuth:    true,
+	})
 }
